<?xml version="1.0"?>
<package format="2">
  <name>dae_relay_controller_ros</name>
  <version>0.0.1</version>
  <description>
    Scripts and launch files for relay module
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="piotr@fictionlab.pl">Piotr Szlachcic</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>python-pylibftdi-pip</exec_depend>

</package>